--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
 body{
-      background-color: lightgray;
+      background-color: #F2F2F2;
   }
-  .sideFilter ol{
-    columns: 2;
-    -webkit-columns: 2;
-    -moz-columns: 2;
-      padding: 0;
+    .sideFilter ol{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
     }
   .sideFilter{
     background-color: white;
     padding: 15px;
-    margin:10px 0;
+        border-radius: 5px;
   }
   .sideFilter h5{
     text-align: center;
@@ -21,12 +20,11 @@ body{
   .pgmLogo{
     width: 100%;
     height: auto;
-      background-color: lightgray;
+      background-color: #F2F2F2;
   }
   .ProgramList {
       background: white;
       padding: 15px;
-      margin: 20px;
           border-radius: 5px;
   }
   .ProgramList .text-content span {
@@ -65,11 +63,8 @@ body{
     margin-top:85px;
   }
   .header {
-    background-color: lightgray;
-    color: #ffffff;
-  }
-  .menu {
-    float: left;
+    background-color: #F2F2F2;
+    color:black;
   }
   .pgmContent {
       float: right;
@@ -80,22 +75,30 @@ body{
     padding: 0;
   }
 
-  .menu li {
-    list-style-type: none;
-    background-color: #00800099;
-    margin-bottom: 15px!important;
-    margin: auto;
-    width: fit-content;
-    border-radius: 5px;
-    padding: 8px;
-    margin-bottom: 7px;
-    background-color: #33b5e5;
+ .menu li {
+    margin-bottom: 20px;
     color: #ffffff;
+    flex-grow: 0;
+    text-align: center;
+    flex-shrink: 0;
+    list-style-type: none;
+    flex-basis: 40%;
+    padding: 8px 0;
+    margin: 0 auto 20px;
+    flex-direction: column;
+    border-radius: 5px;
+    justify-content: space-between;
+    background-color: #C5E09B;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    cursor: pointer;;
+  }
+
+  .active {
+    background-color: #7CBA01 !important;
   }
 
   .menu li:hover {
-    background-color: #0099cc;
+    background-color: #7CBA01;
   }
   footer{
     text-align: center;
@@ -105,15 +108,34 @@ body{
     width: 100%;
     height: 100%;
 }
+.pgmContent .cardLayout {
+    margin-bottom: 20px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 23%;
+    flex-direction: column;
+    background: white;
+    border-radius: 5px;
+    justify-content: space-between;
+  }
+  .pgmContent {
+    float: right;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+.ProgramList .text-content .pgmHead {
+    color: black;
+    font-weight: 700;
+}
+
   @media only screen and (min-width: 990px){
   /* For desktop: */
   .col-2 {
     width: 16.66%;
-    padding: 10px;
+    padding: 0 10px;
   }
-  .col-3 {
-    width: 25%;
-    /*padding: 10px;*/}
 
   .col-10 {
     width: 81.33%;
@@ -122,16 +144,19 @@ body{
 @media only screen and (max-width: 998px) {
   .col-2 {
     width: 24.66%;
-    padding: 10px;
+    padding: 0 10px;
   }
-  .col-3 {
-    width: 45%;
-   /* padding: 10px;*/}
 
   .col-10 {
     width: 71.33%;
-  }
+
 }
+.pgmContent .cardLayout {
+
+    flex-basis: 48%;
+
+}
+  }
 
 @media only screen and (max-width: 600px) {
   /* For mobile phones: */
@@ -158,11 +183,9 @@ body{
   .ProgramList {
       margin: 20px;
   }
-  .pgmContent > div {
-    margin-bottom: 0px;
-  }
+  .pgmContent .cardLayout {
+    flex-basis: 88%;
+    margin:0 auto 20px;
+
 }
-  .ProgramList .text-content .pgmHead {
-    color: black;
-    font-weight: 700;
-    };
+}
