--- a/public/styles.css
+++ b/public/styles.css
@@ -72,7 +72,9 @@ body{
     float: left;
   }
   .pgmContent {
-      float: right;
+    float: right;
+    display: flex;
+    flex-wrap: wrap;
   }
   .menu ul {
     list-style-type: none;
@@ -159,8 +161,12 @@ body{
       margin: 20px;
   }
   .pgmContent > div {
-    margin-bottom: 0px;
-  }
+    margin-bottom: 20px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 50%;
+    flex-direction: column;
+}
 }
   .ProgramList .text-content .pgmHead {
     color: black;
