--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,6 @@ body{
       color: black;
       font-weight: 700;
   }
-  .pgmContent > div {
-    margin-bottom: 20px;
-  }
   .text-content >div {
       margin: 10px;
   }
@@ -112,11 +109,10 @@ body{
     margin-bottom: 20px;
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: 23%;
     flex-direction: column;
     background: white;
     border-radius: 5px;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
   .pgmContent {
     float: right;
@@ -140,6 +136,24 @@ body{
   .col-10 {
     width: 81.33%;
   }
+  	  .pgmContent .cardLayout {
+    margin-bottom: 20px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 23%;
+    flex-direction: column;
+    background: #ffffff;
+    margin-right: 8px;
+    margin-left: 8px;
+    border-radius: 5px;
+    justify-content: space-between;
+}
+.pgmContent {
+    float: right;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+}
 }
 @media only screen and (max-width: 998px) {
   .col-2 {
@@ -188,4 +202,23 @@ body{
     margin:0 auto 20px;
 
 }
+}
+
+.loader {
+  border: 10px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -25px 0 0 -25px;
+  background-color: yellowgreen;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
